--- a/styles/index.css
+++ b/styles/index.css
@@ -29,32 +29,38 @@
 /* BANNER */
 
 .banner-container {
-  background-position: center;
+  /* background-position: center; */
   position: relative;
+  background: url(../multimedia/img/banner-1.jpg) center;
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
 }
+
 .banner-container img {
-  width: 100%;
-  height: 100%;
-  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  text-align: center;
 }
 
 .banner-info {
   position: absolute;
-  top: 80%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  color: rgb(27, 27, 27);
-  padding-bottom: 1.5rem;
+  text-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.7);
 }
 
 .banner-info h3 {
-  font-size: 2.5rem;
+  font-size: 3rem;
   margin-bottom: 0.5rem;
 }
 
 .banner-info p {
-  font-size: 1rem;
+  font-size: 1.5rem;
   margin-bottom: 1rem;
 }
 
@@ -65,6 +71,9 @@
   color: rgb(27, 27, 27);
   text-decoration: none;
   border-radius: 5px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 /* SERVICIOS */
@@ -222,9 +231,10 @@ footer p {
   padding-top: 2rem;
 }
 
-@media (min-width: 1024px) and (max-width: 1200px) {
-}
 @media (min-width: 768px) and (max-width: 1024px) {
+  .banner-info {
+    font-size: auto;
+  }
 }
 @media (min-width: 320px) and (max-width: 768px) {
 }
