--- a/styles/index.css
+++ b/styles/index.css
@@ -47,11 +47,14 @@
 
 .banner-info {
   position: absolute;
-  top: 70%;
+  top: 65%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  text-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.7);
+  text-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 15px;
+  display: inline;
 }
 
 .banner-info h3 {
@@ -231,10 +234,14 @@ footer p {
   padding-top: 2rem;
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-  .banner-info {
-    font-size: auto;
+@media (max-width: 1024px) {
+  .container-servicios {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
-@media (min-width: 320px) and (max-width: 768px) {
+
+@media (max-width: 767px) {
+  .container-servicios {
+    grid-template-columns: 1fr;
+  }
 }
