--- a/styles/index.css
+++ b/styles/index.css
@@ -9,7 +9,7 @@
 .navbar {
   width: 100%;
   padding: 0;
-  background-color: black;
+  background-color: white;
 }
 
 .navbar-toggler-icon {
@@ -25,6 +25,10 @@
   flex-grow: 0;
   font-weight: bold;
   color: blue;
+}
+
+.link-navbar:hover {
+  color: aqua;
 }
 /* BANNER */
 
@@ -52,7 +56,7 @@
   transform: translate(-50%, -50%);
   text-align: center;
   text-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.3);
   padding: 15px;
   display: inline;
 }
@@ -64,7 +68,6 @@
 
 .banner-info p {
   font-size: 1.5rem;
-  margin-bottom: 1rem;
 }
 
 .banner-info a {
@@ -79,13 +82,89 @@
   font-weight: bold;
 }
 
+.banner-info a:hover {
+  background-color: aqua;
+  color: white;
+  font-size: 20px;
+  transition: 0.7s;
+}
+
 /* SERVICIOS */
+
+main {
+  position: relativea;
+}
+
+main img {
+  width: 100%;
+  max-height: 50vh;
+  margin: 0 auto;
+  object-fit: cover;
+  display: inline;
+}
+
+.button-servicios {
+  position: absolute;
+  top: 47%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 10px;
+  width: 75%;
+}
+
+.button-servicios h2,
+.button-servicios span,
+.button-servicios input {
+  margin-bottom: 10px;
+}
+
+.button-servicios h2 {
+  font-weight: bold;
+}
+
+.button-servicios span {
+  font-size: 25px;
+  font-weight: bold;
+  padding-right: 18px;
+}
+
+.button-servicios input {
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 10);
+  border-style: none;
+  font-weight: bold;
+  font-size: 18px;
+  width: auto;
+  height: 2rem;
+  padding-left: 35px;
+}
+
+.button-servicios input:hover {
+  background-color: aqua;
+  color: white;
+}
+
+.servicios {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+}
+
+.servicios-1,
+.servicios-2 {
+  margin-top: 20px;
+}
+
+/* GALERIA */
 
 .container-servicios {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 2%;
+  gap: 1%;
   padding: 20px;
+  background-color: rgba(225, 235, 136, 0.11);
 }
 
 .servicios-img {
@@ -93,8 +172,9 @@
 }
 
 .servicios-img img {
-  max-width: 100%;
+  max-width: 90%;
   height: auto;
+  padding: 1rem;
 }
 
 .servicios-img img {
@@ -116,15 +196,18 @@
 /* RESERVAS */
 
 .form-container {
+  border: 1px solid red;
   padding: 3rem;
-  max-width: 1170%;
+  max-width: 1200%;
   margin-left: auto;
   margin-right: auto;
 }
 
 .contact-logo {
+  border: 1px black;
   text-align: center;
   font-size: 2em;
+  padding-bottom: 3rem;
 }
 
 .form-container h2 {
@@ -133,58 +216,94 @@
 
 .form-container span {
   color: rgba(49, 200, 238, 0.815);
-  font-size: 2.01em;
+  font-size: 2em;
 }
 
-.contac-form {
+.form-container form {
+  border: 1px solid palevioletred;
+  display: grid;
+  grid-template-columns: 1fr, 1fr;
+}
+
+.contact-form .form-grid {
+  grid-column: 1 / 3;
+}
+
+.contact-form {
+  border: 1px solid violet;
   box-shadow: 0 0 20px 0 rgba(116, 201, 223, 0.815);
+  padding: 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
-.contac-form {
-  padding: 1em;
-  background-color: aliceblue;
+.contact-form form {
+  border: 1px solid red;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-items: center;
 }
 
-.contac-form form {
+.contact-form label {
+  width: 21rem;
+}
+
+.contact-form p {
   margin: 0;
-  padding: 1em;
+  padding: 0.5em;
 }
 
-/* .contac-form label, */
-.contac-form input,
-.contac-form textarea {
+.calendario input,
+.pasajeros-adultos input,
+.pasajeros-menores input {
+  border: 2px solid rgb(7, 7, 128);
+  border-radius: 5px;
+  width: 9rem;
+  height: 2.5rem;
+  text-transform: uppercase;
+  font-size: 17px;
+}
+
+.datos-personales,
+.textarea {
   width: 100%;
-  padding: 0.7em;
+  padding: 0.6em;
   border: none;
   background: none;
   outline: 0;
-  border-bottom: 1px solid rgb(7, 7, 128);
+  border-bottom: 2px solid rgb(7, 7, 128);
 }
 
-.calendario input {
-  border: 1px solid black;
-  border-radius: 5px;
-  width: 8rem;
-  text-transform: uppercase;
-  font-weight: 400;
-}
-
-#pasajeros-adultos,
-#pasajeros-menores {
-  border: 1px solid black;
-  border-radius: 5px;
-  width: 8rem;
-  height: 3rem;
+.contact-form textarea {
+  border: 2px solid rgb(7, 7, 128);
+  margin: 1.5rem 0;
 }
 
 #submit {
+  width: 100%;
   background-color: rgba(49, 200, 238, 0.815);
   text-transform: uppercase;
   font-weight: 700;
+  padding: 1rem;
 }
 
-.contac-info {
+#submit .contact-info {
   background-color: rgb(225, 238, 241);
+}
+
+.contact-info h4,
+.contact-info ul,
+.contact-info p {
+  text-align: center;
+}
+
+.contact-info ul {
+  list-style: none;
+  padding: 0;
+}
+.contact-info {
+  padding: 2rem;
 }
 
 footer {
@@ -192,23 +311,24 @@ footer {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 1.5rem;
-  background-color: black;
-  color: aliceblue;
+  padding: 0.3rem;
+  background-color: white;
+  color: black;
   height: auto;
 }
 
 footer h5 {
   font-size: 13px;
   font-weight: bold;
-  padding: 1rem;
+  padding: 0.7rem;
+  padding-top: 2rem;
 }
 
 footer ul {
   list-style: none;
   padding: 0;
   display: flex;
-  gap: 8px;
+  gap: 7px;
 }
 
 footer li {
@@ -221,27 +341,83 @@ footer a {
   height: 40px;
   text-align: center;
   line-height: 40px;
-  font-size: 20px;
+  font-size: 30px;
   transition: font-size 0.3s ease;
 }
 
 footer a:hover {
-  font-size: 30px;
+  font-size: 40px;
 }
 
 footer p {
   font-size: 0.7rem;
-  padding-top: 2rem;
+  padding-bottom: 1rem;
 }
 
 @media (max-width: 1024px) {
   .container-servicios {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  main img {
+    height: 90vh;
+  }
+
+  .button-servicios {
+    width: 60%;
+    padding: 1.5rem;
+  }
+
+  .button-servicios h2 {
+    padding-top: 0.5rem;
+    font-size: 20px;
+  }
+
+  .button-servicios span {
+    font-size: 17px;
+  }
+
+  .button-servicios input {
+    font-size: 15px;
+    font-weight: none;
+    height: 2rem;
+    max-width: 10rem;
+    padding: 0 20px;
+  }
+
+  /* .form-container form {
+    grid-template-columns: 1f;
+  } no me funciona */
 }
 
 @media (max-width: 767px) {
   .container-servicios {
     grid-template-columns: 1fr;
+  }
+  .banner-info h3 {
+    font-size: 2rem;
+  }
+  .banner-info p {
+    font-size: 1rem;
+  }
+
+  main img {
+    height: 90vh;
+  }
+
+  .button-servicios h2 {
+    font-size: 17px;
+  }
+
+  .button-servicios span {
+    font-size: 15px;
+  }
+
+  .button-servicios input {
+    font-size: 13px;
+    height: 1.5rem;
+    max-width: 8rem;
+    padding: 0 15px;
+    margin: 0;
   }
 }
