--- a/styles/index.css
+++ b/styles/index.css
@@ -53,15 +53,17 @@
   position: absolute;
   top: 65%;
   left: 50%;
-  transform: translate(-50%, -50%);
   text-align: center;
-  text-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
-  background-color: rgba(0, 0, 0, 0.3);
+  transform: translate(-50%, -50%);
+
+  text-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.2);
   padding: 15px;
   display: inline;
+  border-radius: 15px;
 }
 
-.banner-info h3 {
+.banner-info h1 {
   font-size: 3rem;
   margin-bottom: 0.5rem;
 }
@@ -76,7 +78,7 @@
   background-color: aliceblue;
   color: rgb(27, 27, 27);
   text-decoration: none;
-  border-radius: 5px;
+  border-radius: 7px;
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
@@ -109,9 +111,11 @@ main img {
   left: 50%;
   text-align: center;
   transform: translate(-50%, -50%);
-  background-color: rgba(255, 255, 255, 0.6);
+  text-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
+  background-color: rgba(255, 255, 255, 0.2);
   padding: 10px;
   width: 75%;
+  border-radius: 10px;
 }
 
 .button-servicios h2,
@@ -132,7 +136,7 @@ main img {
 
 .button-servicios input {
   border-radius: 5px;
-  background-color: rgba(255, 255, 255, 10);
+  background-color: rgba(255, 255, 255, 0.8);
   border-style: none;
   font-weight: bold;
   font-size: 18px;
@@ -148,13 +152,33 @@ main img {
 
 .servicios {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: center;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
 
+.servicios h2 {
+  grid-column: span 3;
+  padding-top: 2rem;
+}
 .servicios-1,
 .servicios-2 {
-  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+*/ .servicios ul {
+  list-style: none;
+  padding: 0;
+}
+
+.servicios li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.sericios li conify-icon {
+  margin-right: 10px;
 }
 
 /* GALERIA */
@@ -318,7 +342,6 @@ footer {
   flex-direction: column;
   padding: 0.3rem;
   background-color: white;
-  color: black;
   height: auto;
 }
 
@@ -396,7 +419,7 @@ footer p {
 }
 
 @media (max-width: 767px) {
-  .banner-info h3 {
+  .banner-info h1 {
     font-size: 2rem;
   }
   .banner-info p {
@@ -421,6 +444,16 @@ footer p {
     max-width: 8rem;
     padding: 0 15px;
     margin: 0;
+  }
+
+  .servicios {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .servicios h1 {
+    text-align: center;
+    font-weight: bold;
   }
 
   .container-galeria {
