Agregue keywords y description a cada html

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,4 +12,5 @@
 // @import "./pages/index";
 @import "./pages/main-index";
 @import "./pages/servicios";
+@import "./pages/galeria";
 // @import "./utilities/media-queries";
