--- a/styles/index.css
+++ b/styles/index.css
@@ -255,31 +255,133 @@
   color: rgba(49, 200, 238, 0.815);
 }
 
-.form-container h3,
+.form-datos {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  box-shadow: 0px 0px 25px 0px rgba(116, 201, 223, 0.815);
+  padding: 2rem;
+}
+
+.fomulario {
+  padding: 2rem;
+
+  justify-content: space-around;
+  gap: 2rem;
+  display: grid;
+  grid-template-areas:
+    "h3 h3 h3 h3 h3"
+    "desde desde hasta hasta"
+    "menores menores mayores mayores"
+    "nombre nombre apellido apellido "
+    "tel tel email email";
+}
+
+.form-1 {
+  grid-column: 1 / 3;
+  align-self: center;
+  justify-self: center;
+  font-size: 45px;
+  font-weight: bold;
+}
+
+.form-2 {
+  grid-column: 1/2;
+}
+
+.form-3 {
+  grid-column: 2/3;
+}
+
+.form-4 {
+  grid-column: 1/2;
+}
+
+.form-5 {
+  grid-column: 2/3;
+}
+
+.form-6 {
+  grid-column: 1/2;
+}
+
+.form-7 {
+  grid-column: 2/3;
+}
+
+.form-8 {
+  grid-column: 1/2;
+}
+
+.form-9 {
+  grid-column: 2/3;
+}
+
+.form-10 {
+  grid-column: 1/5;
+}
+
+.form-11 {
+  grid-column: 1/5;
+}
+
+.form-12 {
+  grid-column: 2/3;
+}
+
+.form-13 {
+  grid-column: 2/3;
+}
+
+.form-2 input,
+.form-3 input,
+.form-4 input,
+.form-5 input {
+  border: 2px solid rgb(7, 7, 128);
+  border-radius: 5px;
+  width: 9rem;
+  height: 2.5rem;
+  text-transform: uppercase;
+  font-size: 17px;
+}
+
+.fomulario p {
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.form-6 input,
+.form-7 input,
+.form-8 input,
+.form-9 input,
+.form-10 textarea {
+  border-style: none;
+  border-bottom: 2px solid rgb(7, 7, 128);
+}
+
+.form-10 textarea,
+.submit {
+  width: 80%;
+}
+
+.submit {
+  background-color: rgba(116, 201, 223, 0.815);
+  color: antiquewhite;
+  height: 2rem;
+  font-size: 1rem;
+  font-weight: bold;
+  border-style: none;
+}
+
+/* .form-container h3,
 .contact-info h3 {
   font-size: 30px;
   font-weight: bold;
   padding: 0;
   margin: 1rem;
 }
-
-#desde,
-#hasta,
-#menores,
-#adultos {
-  display: flex;
-  flex-direction: row;
-  border: 2px solid rgb(7, 7, 128);
-  border-radius: 4px;
-  height: 2rem;
-  width: 6rem;
-}
-
-/* .form-reservas {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  justify-content: center;
-} */
 
 .form-reservas {
   border: 1px solid red;
@@ -334,7 +436,7 @@ textarea {
 
 .contact-info iframe {
   width: 80%;
-}
+} */
 
 @media (max-widht: 768) {
 }
@@ -528,9 +630,9 @@ footer p {
     padding: 0 20px;
   }
 
-  /* .form-container form {
-          grid-template-columns: 1f;
-        } no me funciona */
+  .fomulario {
+    flex-wrap: wrap;
+  }
 }
 
 @media (max-width: 767px) {
@@ -574,7 +676,7 @@ footer p {
   .container-galeria {
     grid-template-columns: 1fr;
   }
-  .form-container {
+  .form-datos {
     display: flex;
     flex-wrap: wrap;
   }
