--- a/styles/index.css
+++ b/styles/index.css
@@ -241,14 +241,16 @@
   margin-left: auto;
   margin-right: auto;
   gap: 0.7rem;
+  background-color: rgb(211, 238, 255);
 }
 
 .form-container h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: rgb(7, 7, 128);
-  font-size: 30px;
+  color: rgb(26, 84, 172);
+  font-size: 40px;
+  padding-bottom: 2rem;
 }
 
 .form-container h1 span {
@@ -256,34 +258,37 @@
 }
 
 .form-datos {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 50% 50%;
-  box-shadow: 0px 0px 25px 0px rgba(116, 201, 223, 0.815);
-  padding: 2rem;
+  display: flex;
 }
 
 .fomulario {
-  padding: 2rem;
-
-  justify-content: space-around;
-  gap: 2rem;
+  background-color: white;
+  box-shadow: 0px 0px 40px 0px white;
+  width: 100%;
+  margin: 0 auto;
+  align-items: center;
+  justify-items: center;
+  gap: 0.7rem;
   display: grid;
   grid-template-areas:
-    "h3 h3 h3 h3 h3"
-    "desde desde hasta hasta"
-    "menores menores mayores mayores"
-    "nombre nombre apellido apellido "
-    "tel tel email email";
+    "h3 h3"
+    "desde hasta"
+    "menores mayores"
+    "nombre apellido "
+    "tel  email"
+    "textarea textarea"
+    "submit submit";
 }
 
 .form-1 {
-  grid-column: 1 / 3;
+  grid-column: 1/3;
   align-self: center;
-  justify-self: center;
-  font-size: 45px;
+  text-align: left;
+  font-size: 2rem;
   font-weight: bold;
+  padding-top: 1rem;
+  color: gray;
+  width: 90%;
 }
 
 .form-2 {
@@ -319,238 +324,151 @@
 }
 
 .form-10 {
-  grid-column: 1/5;
+  grid-column: 1/3;
+  border-top: 1px solid rgb(26, 84, 172);
+  border-bottom: 1px solid rgb(26, 84, 172);
+  width: 90%;
+  padding-left: 1rem;
+  padding-top: 1rem;
+  margin-top: 0.7rem;
 }
 
 .form-11 {
-  grid-column: 1/5;
+  grid-column: 1/3;
+  width: 90%;
+  margin-bottom: 0.7rem;
 }
 
-.form-12 {
-  grid-column: 2/3;
+.fomulario p {
+  font-size: 15px;
+  text-align: center;
+  font-weight: bold;
+  color: grey;
+  margin: 10px;
 }
 
-.form-13 {
-  grid-column: 2/3;
+.form-6 p,
+.form-7 p,
+.form-8 p,
+.form-9 p {
+  text-align: left;
 }
 
 .form-2 input,
 .form-3 input,
 .form-4 input,
 .form-5 input {
-  border: 2px solid rgb(7, 7, 128);
+  border: 1px solid rgb(26, 84, 172);
   border-radius: 5px;
   width: 9rem;
-  height: 2.5rem;
+  height: 2rem;
   text-transform: uppercase;
-  font-size: 17px;
+  text-align: center;
+  font-size: 13px;
 }
 
-.fomulario p {
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
+.form-2 input:hover,
+.form-3 input:hover,
+.form-4 input:hover,
+.form-5 input:hover {
+  color: black;
+  background-color: aqua;
+}
+
+.form-4 input,
+.form-5 input {
+  padding-left: 5px;
+  width: 5rem;
+  height: 2rem;
 }
 
 .form-6 input,
 .form-7 input,
 .form-8 input,
-.form-9 input,
-.form-10 textarea {
+.form-9 input {
   border-style: none;
-  border-bottom: 2px solid rgb(7, 7, 128);
+  border-bottom: 1px solid rgb(26, 84, 172);
+  width: 13rem;
+  font-size: 13px;
+  text-align: left;
+  padding-left: 0.7rem;
+}
+
+.form-6 input:hover,
+.form-7 input:hover,
+.form-8 input:hover,
+.form-9 input:hover {
+  color: black;
+  background-color: aqua;
 }
 
 .form-10 textarea,
 .submit {
-  width: 80%;
+  width: 100%;
+  border-style: none;
 }
 
 .submit {
   background-color: rgba(116, 201, 223, 0.815);
   color: antiquewhite;
-  height: 2rem;
-  font-size: 1rem;
-  font-weight: bold;
-  border-style: none;
-}
-
-/* .form-container h3,
-.contact-info h3 {
-  font-size: 30px;
-  font-weight: bold;
-  padding: 0;
-  margin: 1rem;
-}
-
-.form-reservas {
-  border: 1px solid red;
-  box-shadow: 0px 0px 20px 0px rgba(116, 201, 223, 0.815);
-  padding: 1em;
-
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.form-reservas form {
-  border-right: 2px solid rgb(7, 7, 128);
-  height: 100%;
-}
-
-.submit form label,
-input {
-  margin: 0.5em;
-}
-
-input {
-  border-style: none;
-  border-bottom: 2px solid rgb(7, 7, 128);
-}
-
-.form-reservas span {
-  font-size: 15px;
-}
-
-.submit,
-textarea {
-  width: 90%;
-}
-
-textarea {
-  border: none;
-  border-bottom: 2px solid rgb(7, 7, 128);
-}
-
-.submit {
-  background-color: rgba(116, 201, 223, 0.815);
-  color: antiquewhite;
-  height: 2rem;
-  font-size: 1rem;
-  font-weight: bold;
-  border: none;
-}
-
-.contact-info ul {
-  list-style: none;
-}
-
-.contact-info iframe {
-  width: 80%;
-} */
-
-@media (max-widht: 768) {
-}
-
-/* .form-container {
-  border: 1px solid red;
-  padding: 3rem;
-  max-width: 1200%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.contact-logo {
-  border: 1px black;
-  text-align: center;
-  font-size: 2em;
-  padding-bottom: 3rem;
-}
-
-.form-container h1 {
-  color: rgb(7, 7, 128);
-}
-
-.form-container span {
-  color: rgba(49, 200, 238, 0.815);
-  font-size: 2em;
-}
-
-.form-container form {
-  border: 1px solid palevioletred;
-  display: grid;
-  grid-template-columns: 1fr, 1fr;
-}
-
-.contact-form .form-grid {
-  grid-column: 1 / 3;
-}
-
-.contact-form {
-  border: 1px solid violet;
-  box-shadow: 0 0 20px 0 rgba(116, 201, 223, 0.815);
-  padding: 1rem;
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-
-.contact-form form {
-  border: 1px solid red;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  justify-items: center;
-}
-
-.contact-form label {
-  width: 21rem;
-}
-
-.contact-form p {
-  margin: 0;
-  padding: 0.5em;
-}
-
-.calendario input,
-.pasajeros-adultos input,
-.pasajeros-menores input {
-  border: 2px solid rgb(7, 7, 128);
-  border-radius: 5px;
-  width: 9rem;
   height: 2.5rem;
-  text-transform: uppercase;
-  font-size: 17px;
+  font-size: 1rem;
+  font-weight: bold;
 }
 
-.datos-personales,
-.textarea {
-  width: 100%;
-  padding: 0.6em;
-  border: none;
-  background: none;
-  outline: 0;
-  border-bottom: 2px solid rgb(7, 7, 128);
+.submit:hover {
+  background-color: aqua;
+  color: black;
 }
 
-.contact-form textarea {
-  border: 2px solid rgb(7, 7, 128);
-  margin: 1.5rem 0;
-}
-
-#submit {
-  width: 100%;
-  background-color: rgba(49, 200, 238, 0.815);
-  text-transform: uppercase;
-  font-weight: 700;
-  padding: 1rem;
-}
-
-#submit .contact-info {
-  background-color: rgb(225, 238, 241);
-}
-
-.contact-info h4,
-.contact-info ul,
-.contact-info p {
+.informacion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
+
+  margin: 10rem 1rem 0 2rem;
 }
 
-.contact-info ul {
-  list-style: none;
-  padding: 0;
+.informacion h3 {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+
+  text-align: left;
+  font-size: 1rem;
+  font-weight: bold;
+  padding-top: 1rem;
+  color: gray;
 }
-.contact-info {
-  padding: 2rem;
-} */
+
+.informacion ul {
+  list-style: none;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  height: 50%;
+}
+
+.informacion li {
+  text-align: left;
+  font-size: 15px;
+  margin-bottom: 8px;
+}
+
+.informacion iconify-icon {
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(26, 84, 172);
+  padding-right: 0.5rem;
+}
+
+.maps {
+  margin-top: 3rem;
+  width: 100%;
+  height: auto;
+  box-shadow: 0px 0px 40px 0px white;
+}
 
 footer {
   display: flex;
@@ -629,10 +547,6 @@ footer p {
     max-width: 10rem;
     padding: 0 20px;
   }
-
-  .fomulario {
-    flex-wrap: wrap;
-  }
 }
 
 @media (max-width: 767px) {
@@ -676,8 +590,23 @@ footer p {
   .container-galeria {
     grid-template-columns: 1fr;
   }
-  .form-datos {
-    display: flex;
-    flex-wrap: wrap;
+
+  .fomulario {
+    display: grid;
+    grid-template-columns: 1fr;
+    /* grid-template-areas:
+      "h3 h3"
+      "desde"
+      "hasta"
+      "menores"
+      "mayores"
+      "nombre"
+      "apellido "
+      "tel"
+      "email"
+      "textarea"
+      "textarea"
+      "submit"
+      "submit"; */
   }
 }
