--- a/styles/index.css
+++ b/styles/index.css
@@ -261,7 +261,7 @@
   display: flex;
 }
 
-.fomulario {
+.formulario {
   background-color: white;
   box-shadow: 0px 0px 40px 0px white;
   width: 100%;
@@ -270,17 +270,19 @@
   justify-items: center;
   gap: 0.7rem;
   display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
   grid-template-areas:
-    "h3 h3"
+    "titulo titulo"
     "desde hasta"
-    "menores mayores"
+    "menores adultos"
     "nombre apellido "
-    "tel  email"
+    "tel email"
     "textarea textarea"
     "submit submit";
 }
 
-.form-1 {
+.titulo {
   grid-column: 1/3;
   align-self: center;
   text-align: left;
@@ -291,35 +293,35 @@
   width: 90%;
 }
 
-.form-2 {
+.desde {
   grid-column: 1/2;
 }
 
-.form-3 {
+.hasta {
   grid-column: 2/3;
 }
 
-.form-4 {
+.menores {
   grid-column: 1/2;
 }
 
-.form-5 {
+.adultos {
   grid-column: 2/3;
 }
 
-.form-6 {
+.nombre {
   grid-column: 1/2;
 }
 
-.form-7 {
+.apellido {
   grid-column: 2/3;
 }
 
-.form-8 {
+.tel {
   grid-column: 1/2;
 }
 
-.form-9 {
+.email {
   grid-column: 2/3;
 }
 
@@ -336,10 +338,10 @@
 .form-11 {
   grid-column: 1/3;
   width: 90%;
-  margin-bottom: 0.7rem;
+  margin-bottom: 1rem;
 }
 
-.fomulario p {
+.formulario p {
   font-size: 15px;
   text-align: center;
   font-weight: bold;
@@ -347,17 +349,17 @@
   margin: 10px;
 }
 
-.form-6 p,
-.form-7 p,
-.form-8 p,
-.form-9 p {
+.nombre p,
+.apellido p,
+.tel p,
+.email p {
   text-align: left;
 }
 
-.form-2 input,
-.form-3 input,
-.form-4 input,
-.form-5 input {
+.desde input,
+.hasta input,
+.menores input,
+.adultos input {
   border: 1px solid rgb(26, 84, 172);
   border-radius: 5px;
   width: 9rem;
@@ -365,41 +367,43 @@
   text-transform: uppercase;
   text-align: center;
   font-size: 13px;
+  padding-left: 1rem;
 }
 
-.form-2 input:hover,
-.form-3 input:hover,
-.form-4 input:hover,
-.form-5 input:hover {
+.desde input:hover,
+.hasta input:hover,
+.menores input:hover,
+.adultos input:hover {
   color: black;
   background-color: aqua;
 }
 
-.form-4 input,
-.form-5 input {
+.menores input,
+.adultos input {
   padding-left: 5px;
-  width: 5rem;
+  width: 6rem;
   height: 2rem;
 }
 
-.form-6 input,
-.form-7 input,
-.form-8 input,
-.form-9 input {
+.nombre input,
+.apellido input,
+.tel input,
+.email input {
   border-style: none;
   border-bottom: 1px solid rgb(26, 84, 172);
-  width: 13rem;
+  width: 15rem;
   font-size: 13px;
   text-align: left;
   padding-left: 0.7rem;
 }
 
-.form-6 input:hover,
-.form-7 input:hover,
-.form-8 input:hover,
-.form-9 input:hover {
+.nombre input:hover,
+.apellido input:hover,
+.tel input:hover,
+.email input:hover {
   color: black;
   background-color: aqua;
+  border-style: none;
 }
 
 .form-10 textarea,
@@ -412,7 +416,7 @@
   background-color: rgba(116, 201, 223, 0.815);
   color: antiquewhite;
   height: 2.5rem;
-  font-size: 1rem;
+  font-size: 1.3rem;
   font-weight: bold;
 }
 
@@ -591,10 +595,34 @@ footer p {
     grid-template-columns: 1fr;
   }
 
-  .fomulario {
-    display: grid;
+  .form-container {
+    text-align: center;
+  }
+
+  .form-datos {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  /* .formulario { */
+  .titulo,
+  .desdde,
+  .hasta,
+  .menores,
+  .adultos,
+  .nombre,
+  .apellido,
+  .tel,
+  .email,
+  .textarea,
+  .submit {
+    grid-column: 1;
+    margin: 0;
+    max-width: 700px;
+  }
+  /* display: grid;
     grid-template-columns: 1fr;
-    /* grid-template-areas:
+    grid-template-areas:
       "h3 h3"
       "desde"
       "hasta"
@@ -608,5 +636,4 @@ footer p {
       "textarea"
       "submit"
       "submit"; */
-  }
 }
