--- a/scss/pages/_servicios.scss
+++ b/scss/pages/_servicios.scss
@@ -1,81 +1,152 @@
-.main-servicios {
+/* SERVICIOS*/
+
+main {
   position: relative;
+  width: 100%;
+
+  h1 {
+    color: #0e185f;
+    padding-top: 1.5rem;
+    padding-bottom: 0.5rem;
+    text-align: center;
+    margin-bottom: 0.5rem;
+    border-bottom: 2px solid #0e185f;
+  }
+
   img {
     width: 100%;
-    max-height: 50vh;
+    max-height: 40vh;
     margin: 0 auto;
+    padding-bottom: 0.5rem;
     object-fit: cover;
-    display: inline;
+    display: block;
+    border-bottom: 2px solid #0e185f;
   }
-  .button-servicios {
-    position: absolute;
-    top: 47%;
-    left: 50%;
-    text-align: center;
-    transform: translate(-50%, -50%);
-    text-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
-    background-color: rgba(255, 255, 255, 0.2);
-    padding: 10px;
-    width: 75%;
-    border-radius: 10px;
-    h2 {
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
-    span {
-      margin-bottom: 10px;
-      font-size: 25px;
-      font-weight: bold;
-      padding-right: 18px;
-    }
-    input {
-      margin-bottom: 10px;
-      border-radius: 5px;
-      background-color: rgba(255, 255, 255, 0.8);
-      border-style: none;
-      font-weight: bold;
-      font-size: 18px;
-      width: auto;
-      height: 2rem;
-      padding-left: 35px;
-      &:hover {
-        background-color: aqua;
-        color: white;
-      }
-    }
-    span {
-      margin-bottom: 10px;
-    }
-    input {
-      margin-bottom: 10px;
-    }
-  }
+
   .servicios {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    h1 {
-      grid-column: span 3;
-      padding-top: 2rem;
-      text-align: center;
-    }
-    .servicios-1 {
+    justify-content: center;
+    gap: 0.5rem;
+    padding: 2rem;
+
+    .servicios-1,
+    .servicios-2,
+    .servicios-3 {
       display: flex;
+      justify-content: center;
+      align-items: center;
       flex-direction: column;
-      padding: 3rem;
-      justify-content: space-between;
+      height: auto;
+      padding: 1rem;
+      max-width: 20rem;
+      border-radius: 15px;
+      box-shadow: 0px 0px 20px 0px rgb(248, 103, 221);
+
       ul {
         list-style: none;
-        padding: 0;
+        padding: 1rem 0 0.5rem 0;
+
         li {
           display: flex;
           align-items: center;
+          font-size: 1rem;
           margin-bottom: 10px;
-          iconify-icon {
+
+          .icon {
             margin-right: 10px;
+            font-size: 1.5rem;
+            color: #0e185f;
           }
+        }
+      }
+
+      .button-servicios {
+        background-color: #0e185f;
+        color: #afd3e2;
+        width: 6rem;
+        height: 2rem;
+        border-radius: 8px;
+        text-align: center;
+        text-decoration: none;
+
+        &:hover {
+          background-color: #00ffdd;
+          color: #0e185f;
+          transition: 0.7s;
         }
       }
     }
   }
 }
+
+// main {
+//   position: relative;
+//   width: 100%;
+//   h1 {
+//     color: #0e185f;
+//     padding-top: 1.5rem;
+//     padding-bottom: 0.5rem;
+//     text-align: center;
+//     margin-bottom: 0.5rem;
+//     border-bottom: 2px solid #0e185f;
+//   }
+//   img {
+//     width: 100%;
+//     max-height: 40vh;
+//     margin: 0 auto;
+//     padding-bottom: 0.5rem;
+//     object-fit: cover;
+//     display: block;
+//     border-bottom: 2px solid #0e185f;
+//   }
+//   .servicios {
+//     display: grid;
+//     grid-template-columns: repeat(3, 1fr);
+//     justify-content: center;
+//     gap: 0.5rem;
+//     padding: 2rem;
+//     .servicios-1,
+//     .servicios-2,
+//     .servicios-3 {
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
+//       flex-direction: column;
+//       height: auto;
+//       padding: 1rem;
+//       max-width: 20rem;
+//       border-radius: 15px;
+//       box-shadow: 0px 0px 20px 0px rgb(248, 103, 221);
+//       ul {
+//         list-style: none;
+//         padding: 1rem 0 0.5rem 0;
+//         li {
+//           display: flex;
+//           align-items: center;
+//           font-size: 1rem;
+//           margin-bottom: 10px;
+//           li iconify-icon {
+//             margin-right: 10px;
+//             font-size: 1.5rem;
+//             color: #0e185f;
+//           }
+//         }
+//       }
+//       .button-servicios {
+//         background-color: #0e185f;
+//         color: #afd3e2;
+//         width: 6rem;
+//         height: 2rem;
+//         border-radius: 8px;
+//         text-align: center;
+//         text-decoration: none;
+//       }
+//       &:hover {
+//         background-color: #00ffdd;
+//         color: #0e185f;
+//         transition: 0.7s;
+//       }
+//     }
+//   }
+// }
