--- a/styles/index.css
+++ b/styles/index.css
@@ -12,29 +12,42 @@
   background-color: white;
 } */
 
-/* .navbar {
+/* .barra {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
   padding: 0;
-  background-color: white;
+  background-color: #0e185f;
 } */
 
-/* .nav-img img{
-  width: 12rem;
-  height: 6rem;
+/* .navb-img {
+  width: 6rem;
 } */
 
-/* .navbar-toggler-icon {
+/* .navbar-toggler {
   border: none;
 } */
 
-/* .link-navbar {
-  flex-grow: 0;
-  font-weight: bold;
-  color: blue;
+/* .toggler-color {
+  background-color: #afd3e2;
 } */
 
-/* .link-navbar:hover {
+/* .navbar-nav .nav-item .nav-link.active {
+  color: #afd3e2;
+} */
+
+/* .nav-link {
+  font-weight: bold;
+  color: #afd3e2;
+} */
+
+/* .nav-link:hover {
   color: aqua;
+} */
+
+/* .nav-link.active {
+  color: #afd3e2;
 } */
 
 /* BANNER */
@@ -42,47 +55,53 @@
 /* .banner-container {
   position: relative;
   background: url(../multimedia/img/banner-1.jpg) center;
-  height: 70vh;
+  background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 80vh;
   color: white;
+  object-fit: cover;
+} */
+
+/* .banner-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
 } */
 
 /* .banner-info {
   position: absolute;
-  top: 65%;
+  top: 75%;
   left: 50%;
   text-align: center;
   transform: translate(-50%, -50%);
-
-  text-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
-  background-color: rgba(0, 0, 0, 0.2);
-  padding: 15px;
   display: inline;
-  border-radius: 15px;
 } */
 
-/* .banner-info h1 {
+/* .titulo-banner {
   font-size: 3rem;
-  margin-bottom: 0.5rem;
-} */
-
-/* .banner-info p {
-  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  color: white;
 } */
 
 /* .banner-container img {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 10);
   padding: 20px;
   text-align: center;
 } */
 
-/* .banner-info a {
+/* .button-home {
   display: block;
   padding: 0.2rem 1rem;
-  background-color: aliceblue;
-  color: rgb(27, 27, 27);
+  background-color: #00ffdd;
+  color: #0e185f;
   text-decoration: none;
   border-radius: 7px;
   text-align: center;
@@ -90,10 +109,9 @@
   font-weight: bold;
 } */
 
-/* .banner-info a:hover {
-  background-color: aqua;
-  color: white;
-  font-size: 20px;
+/* .button-home:hover {
+  background-color: #0e185f;
+  color: #00ffdd;
   transition: 0.7s;
 } */
 
@@ -101,177 +119,238 @@
 
 /* .main-servicios {
   position: relative;
+  width: 100%;
+} */
+
+/* .main-servicios h1 {
+  color: #0e185f;
+  padding-top: 1.5rem;
+  padding-bottom: 0.5rem;
+  text-align: center;
+  margin-bottom: 0.5rem;
+  border-bottom: 2px solid #0e185f;
 } */
 
 /* .main-servicios img {
   width: 100%;
-  max-height: 50vh;
+  max-height: 40vh;
   margin: 0 auto;
+  padding-bottom: 0.5rem;
   object-fit: cover;
-  display: inline;
-} */
-
-/* .button-servicios {
-  position: absolute;
-  top: 47%;
-  left: 50%;
-  text-align: center;
-  transform: translate(-50%, -50%);
-  text-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
-  background-color: rgba(255, 255, 255, 0.2);
-  padding: 10px;
-  width: 75%;
-  border-radius: 10px;
-} */
-
-/* .button-servicios h2,
-.button-servicios span,
-.button-servicios input {
-  margin-bottom: 10px;
-} */
-
-/* .button-servicios h2 {
-  font-weight: bold;
-} */
-
-/* .button-servicios span {
-  font-size: 25px;
-  font-weight: bold;
-  padding-right: 18px;
-} */
-
-.button-servicios input {
-  border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.8);
-  border-style: none;
-  font-weight: bold;
-  font-size: 18px;
-  width: auto;
-  height: 2rem;
-  padding-left: 35px;
-}
-
-/* .button-servicios input:hover {
-  background-color: aqua;
-  color: white;
+  display: block;
+  border-bottom: 2px solid #0e185f;
 } */
 
 /* .servicios {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  justify-content: center;
+  gap: 0.5rem;
+  padding: 2rem;
 } */
 
-/* .servicios h1 {
-  grid-column: span 3;
-  padding-top: 2rem;
-  text-align: center;
-} */
-/* 
-.servicios-1,
+/* .servicios-1,
 .servicios-2,
 .servicios-3 {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  padding: 3rem;
-  justify-content: space-between;
+  height: auto;
+  padding: 1rem;
+  max-width: 20rem;
+  border-radius: 15px;
+  box-shadow: 0px 0px 20px 0px rgb(248, 103, 221);
 } */
 
 /* .servicios ul {
   list-style: none;
-  padding: 0;
+  padding: 1rem 0 0.5rem 0;
 } */
 
 /* .servicios li {
   display: flex;
   align-items: center;
+  font-size: 1rem;
   margin-bottom: 10px;
 } */
 
-/* .servicios li iconify-icon {
+/* .icon {
   margin-right: 10px;
+  font-size: 1.5rem;
+  color: #0e185f;
 } */
+
+/* .button-servicios {
+  background-color: #0e185f;
+  color: #afd3e2;
+  width: 6rem;
+  height: 2rem;
+  border-radius: 8px;
+  text-align: center;
+  text-decoration: none;
+} */
+
+/* .:hover {
+  background-color: #00ffdd;
+  color: #0e185f;
+  transition: 0.7s;
+} */
+
+/*NOSOTROS*/
+
+/* .titulo-nosotros {
+  color: #0e185f;
+  padding-bottom: 0.5rem;
+  text-align: center;
+  margin-bottom: 0.5rem;
+  border-bottom: 2px solid #0e185f;
+  margin-top: 1rem;
+} */
+
+/* .nosotros-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: whitesmoke;
+  width: 100%;
+  gap: 1rem;
+  padding: 0 2rem;
+  box-sizing: border-box;
+} */
+
+/* .comienzos,
+.actualidad {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 1rem;
+} */
+
+.img-container {
+  max-width: 50%;
+  margin: 0 auto;
+}
+
+.comienzos img,
+.actualidad img {
+  width: 50%;
+  object-fit: cover;
+  box-shadow: 0px 0px 30px 0px rgb(248, 103, 221);
+}
+
+.titulo-nosotros {
+  margin-bottom: 2rem;
+}
+
+.actualidad {
+  flex-direction: row-reverse;
+}
+
+.antes,
+.ahora {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 1rem;
+  width: 50%;
+}
+
+.resaltado {
+  font-weight: bold;
+  color: black;
+}
+
+.pie-nosotros {
+  text-align: center;
+  padding-top: 1rem;
+  margin-bottom: 1rem;
+}
 
 /* GALERIA */
 
-/* .container-galeria {
+.main-galeria h1 {
+  color: #0e185f;
+  padding-bottom: 0.5rem;
+  text-align: center;
+  margin-bottom: 0.5rem;
+  border-bottom: 2px solid #0e185f;
+  margin-top: 1rem;
+}
+
+.container-galeria {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
   padding: 20px;
-} */
+}
 
-/* .galeria-img {
+.galeria-img {
   text-align: center;
-} */
+}
 
-/* .galeria-img img {
+.galeria-img img {
   max-width: 90%;
   height: auto;
   padding: 0.5rem;
-} */
+}
 
-/* .galeria-img img {
+.galeria-img img {
   animation: fade 0.7s;
-} */
+}
 
-/* .card-back {
+.card-back {
   display: none;
-} */
+}
 
-/* .galeria-img:hover .card-back {
+.galeria-img:hover .card-back {
   display: block;
-} */
+}
 
-/* .galeria-img:hover .card-front {
+.galeria-img:hover .card-front {
   display: none;
-} */
-
-/* .container-galeria p {
-  font-size: 15px;
-  font-weight: bold;
-} */
+}
 
 /* RESERVAS */
 
 .form-container {
   align-items: center;
-  padding: 3rem;
-  max-width: 1200%;
+  padding: 0 3rem;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   gap: 0.7rem;
-  background-color: rgb(211, 238, 255);
 }
 
 .form-container h1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: rgb(26, 84, 172);
-  font-size: 40px;
-  padding-bottom: 2rem;
-}
-
-.form-container h1 span {
-  color: rgba(49, 200, 238, 0.815);
+  color: #0e185f;
+  padding-bottom: 0.5rem;
+  text-align: center;
+  margin-bottom: 0.5rem;
+  border-bottom: 2px solid #0e185f;
+  margin-top: 1rem;
 }
 
 .form-datos {
   display: flex;
+  margin: 2rem 0;
 }
 
 .formulario {
-  background-color: white;
-  box-shadow: 0px 0px 40px 0px white;
-  width: 100%;
-  margin: 0 auto;
+  background-color: #0e185f;
+  box-shadow: 0px 0px 30px 0px rgb(248, 103, 221);
+  width: 70%;
+  padding: 2rem;
   align-items: center;
   justify-items: center;
   gap: 0.7rem;
+  border-radius: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto;
   grid-template-areas:
     "titulo titulo"
     "desde hasta"
@@ -280,17 +359,6 @@
     "tel email"
     "textarea textarea"
     "submit submit";
-}
-
-.titulo {
-  grid-column: 1/3;
-  align-self: center;
-  text-align: left;
-  font-size: 2rem;
-  font-weight: bold;
-  padding-top: 1rem;
-  color: gray;
-  width: 90%;
 }
 
 .desde {
@@ -327,25 +395,23 @@
 
 .form-10 {
   grid-column: 1/3;
-  border-top: 1px solid rgb(26, 84, 172);
-  border-bottom: 1px solid rgb(26, 84, 172);
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
   width: 90%;
-  padding-left: 1rem;
-  padding-top: 1rem;
+  padding: 1rem;
   margin-top: 0.7rem;
 }
 
 .form-11 {
   grid-column: 1/3;
   width: 90%;
-  margin-bottom: 1rem;
 }
 
 .formulario p {
   font-size: 15px;
   text-align: center;
   font-weight: bold;
-  color: grey;
+  color: white;
   margin: 10px;
 }
 
@@ -360,22 +426,24 @@
 .hasta input,
 .menores input,
 .adultos input {
-  border: 1px solid rgb(26, 84, 172);
+  border: 1px solid white;
   border-radius: 5px;
   width: 9rem;
   height: 2rem;
   text-transform: uppercase;
   text-align: center;
   font-size: 13px;
-  padding-left: 1rem;
+  padding: 1rem;
+  color: white;
+  background-color: transparent;
 }
 
 .desde input:hover,
 .hasta input:hover,
 .menores input:hover,
 .adultos input:hover {
-  color: black;
-  background-color: aqua;
+  color: #0e185f;
+  background-color: #00ffdd;
 }
 
 .menores input,
@@ -390,38 +458,40 @@
 .tel input,
 .email input {
   border-style: none;
-  border-bottom: 1px solid rgb(26, 84, 172);
-  width: 15rem;
+  border-bottom: 1px solid white;
+  width: 13rem;
   font-size: 13px;
   text-align: left;
   padding-left: 0.7rem;
+  background-color: transparent;
 }
 
 .nombre input:hover,
 .apellido input:hover,
 .tel input:hover,
 .email input:hover {
-  color: black;
-  background-color: aqua;
-  border-style: none;
+  color: #0e185f;
+  background-color: #00ffdd;
 }
 
 .form-10 textarea,
 .submit {
   width: 100%;
   border-style: none;
+  background-color: transparent;
+  color: white;
 }
 
 .submit {
-  background-color: rgba(116, 201, 223, 0.815);
-  color: antiquewhite;
+  background-color: white;
+  color: #0e185f;
   height: 2.5rem;
   font-size: 1.3rem;
   font-weight: bold;
 }
 
 .submit:hover {
-  background-color: aqua;
+  background-color: #00ffdd;
   color: black;
 }
 
@@ -430,63 +500,58 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-
-  margin: 10rem 1rem 0 2rem;
-}
-
-.informacion h3 {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 2rem;
-
-  text-align: left;
-  font-size: 1rem;
-  font-weight: bold;
-  padding-top: 1rem;
-  color: gray;
+  margin: 3rem 1rem 0 2rem;
 }
 
 .informacion ul {
   list-style: none;
-  text-align: center;
-  padding: 0;
-  margin: 0;
-  height: 50%;
+  padding: 1rem 0 0.5rem 0;
 }
 
 .informacion li {
-  text-align: left;
-  font-size: 15px;
-  margin-bottom: 8px;
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  margin-bottom: 10px;
 }
 
 .informacion iconify-icon {
-  font-size: 20px;
+  margin-right: 10px;
+  font-size: 1.5rem;
+  color: #0e185f;
+}
+
+.ubicacion h3 {
+  margin-left: 1rem;
+  text-align: left;
+  font-size: 1.5rem;
   font-weight: bold;
-  color: rgb(26, 84, 172);
-  padding-right: 0.5rem;
+  color: #0e185f;
 }
 
 .maps {
-  margin-top: 3rem;
   width: 100%;
   height: auto;
-  box-shadow: 0px 0px 40px 0px white;
+  box-shadow: 0px 0px 20px 0px rgb(175, 175, 180);
+
+  margin-bottom: 2rem;
+  margin-top: 1rem;
 }
 
+/* FOOTER */
 footer {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   padding: 0.3rem;
-  background-color: white;
-  height: auto;
+  background-color: #0e185f;
+  color: #afd3e2;
+  height: 9rem;
 }
 
 footer h5 {
   font-size: 13px;
-  font-weight: bold;
   padding: 0.7rem;
   padding-top: 2rem;
 }
@@ -518,93 +583,133 @@ footer a:hover {
 
 footer p {
   font-size: 0.7rem;
-  padding-bottom: 1rem;
+  padding-bottom: 0.5rem;
 }
 
 @media (max-width: 1024px) {
+  /*SERVICIOS*/
+
+  .servicios {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .servicios li iconify-icon {
+    font-size: 1rem;
+  }
+
+  .servicios a {
+    width: 5rem;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  /*NOSOTROS*/
+
+  .comienzos,
+  .actualidad {
+    flex-direction: column;
+  }
+
+  .antes,
+  .ahora {
+    width: 100%;
+  }
+  /* GALERIA*/
+
   .container-galeria {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .main-servicios img {
-    height: 90vh;
+  /*RESERVAS*/
+
+  .formulario {
+    width: 90%;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "titulo"
+      "desde"
+      "hasta"
+      "menores"
+      "adultos"
+      "nombre"
+      "apellido"
+      "tel"
+      "email"
+      "textarea"
+      "submit";
   }
 
-  .button-servicios {
-    width: 60%;
-    padding: 1.5rem;
+  .form-datos {
+    flex-direction: column;
   }
 
-  .button-servicios h2 {
-    padding-top: 0.5rem;
-    font-size: 20px;
-  }
-
-  .button-servicios span {
-    font-size: 17px;
-  }
-
-  .button-servicios input {
-    font-size: 15px;
-    font-weight: none;
-    height: 2rem;
-    max-width: 10rem;
-    padding: 0 20px;
+  .informacion {
+    margin: 2rem;
   }
 }
 
 @media (max-width: 767px) {
+  /*HOME*/
+
+  .banner-info {
+    top: 40%;
+  }
+
   .banner-info h1 {
     font-size: 2rem;
   }
-  .banner-info p {
-    font-size: 1rem;
-  }
 
-  .main-servicios img {
-    height: 90vh;
-  }
-
-  .button-servicios h2 {
-    font-size: 17px;
-  }
-
-  .button-servicios span {
-    font-size: 15px;
-  }
-
-  .button-servicios input {
-    font-size: 13px;
-    height: 1.5rem;
-    max-width: 8rem;
-    padding: 0 15px;
-    margin: 0;
-  }
+  /*SERVICIOS */
 
   .servicios {
-    display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(1, 1fr);
   }
 
-  .servicios h1 {
-    text-align: center;
-    font-weight: bold;
+  /*NOSOTROS*/
+
+  .comienzos img,
+  .actualidad img {
+    width: 100%;
   }
 
+  /*GALERIA*/
   .container-galeria {
     grid-template-columns: 1fr;
   }
 
+  /*RESERVAS*/
+
   .form-container {
     text-align: center;
+    padding: 0 1.5rem;
+  }
+
+  .form-datos {
+    margin: 1rem 0;
+  }
+
+  .formulario {
+    width: 100%;
+    padding: 1rem;
+    grid-template-areas:
+      "titulo"
+      "desde"
+      "hasta"
+      "menores"
+      "adultos"
+      "nombre"
+      "apellido"
+      "tel"
+      "email"
+      "textarea"
+      "submit";
   }
 
   .form-datos {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
   }
 
-  /* .formulario { */
   .titulo,
   .desdde,
   .hasta,
@@ -618,22 +723,29 @@ footer p {
   .submit {
     grid-column: 1;
     margin: 0;
-    max-width: 700px;
+    width: 100%;
   }
-  /* display: grid;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-      "h3 h3"
-      "desde"
-      "hasta"
-      "menores"
-      "mayores"
-      "nombre"
-      "apellido "
-      "tel"
-      "email"
-      "textarea"
-      "textarea"
-      "submit"
-      "submit"; */
+
+  .nombre input,
+  .apellido input,
+  .tel input,
+  .email input {
+    width: auto;
+    padding-left: 0.8rem;
+    margin-left: 0.7rem;
+  }
+
+  .informacion {
+    margin: 2rem 1rem 0 2rem;
+  }
+
+  .ubicacion h3 {
+    margin-left: 0;
+    text-align: center;
+  }
+
+  .maps {
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+  }
 }
