--- a/css/main.css
+++ b/css/main.css
@@ -210,11 +210,12 @@ main .nosotros-container .actualidad .img-container {
   max-width: 50%;
   margin: 0 auto;
 }
-main .nosotros-container .comienzos .comienzos img,
-main .nosotros-container .comienzos .actualidad img,
-main .nosotros-container .actualidad .comienzos img,
-main .nosotros-container .actualidad .actualidad img {
+main .nosotros-container .comienzos .img-antes,
+main .nosotros-container .comienzos .img-actualidad,
+main .nosotros-container .actualidad .img-antes,
+main .nosotros-container .actualidad .img-actualidad {
   width: 50%;
+  height: auto;
   object-fit: cover;
   box-shadow: 0px 0px 30px 0px rgb(248, 103, 221);
 }
@@ -239,6 +240,47 @@ main .nosotros-container .actualidad .ahora .resaltado {
 }
 main .actualidad {
   flex-direction: row-reverse;
+}
+main .pie-nosotros {
+  text-align: center;
+  padding-top: 1rem;
+  margin-bottom: 1rem;
+  color: #0e185f;
+}
+
+main .titulo-galeria {
+  color: #0e185f;
+  padding-bottom: 0.5rem;
+  text-align: center;
+  margin-bottom: 0.5rem;
+  border-bottom: 2px solid #0e185f;
+  margin-top: 1rem;
+}
+main .container-galeria {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  padding: 20px;
+}
+main .container-galeria .galeria-img {
+  text-align: center;
+}
+main .container-galeria .galeria-img .galeria-img img {
+  max-width: 90%;
+  height: auto;
+  padding: 0.5rem;
+}
+main .container-galeria .galeria-img .galeria-img img {
+  animation: fade 0.7s;
+}
+main .container-galeria .card-front:hover {
+  display: none;
+}
+main .container-galeria .card-back {
+  display: none;
+}
+main .container-galeria .card-back:hover {
+  display: block;
 }
 
 /*# sourceMappingURL=main.css.map */
