--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,8 +2,10 @@
 @import "utilitis/globals";
 
 @import "components/header";
+@import "components/footer";
 
 @import "pages/home";
 @import "pages/servicios";
 @import "pages/nosotros";
 @import "pages/galeria";
+@import "pages/reservas";
