--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -15,6 +14,7 @@ header {
 }
 header .barra {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -31,14 +31,14 @@ header .barra .container-fluid .toggler-color {
   background-color: #afd3e2;
 }
 header .barra .container-fluid .navbar-nav .nav-item .nav-link.active {
-  color: #afd3e2;
+  color: white;
 }
 header .barra .container-fluid .nav-link {
   font-weight: bold;
-  color: #afd3e2;
+  color: white;
 }
 header .barra .container-fluid:hover {
-  color: aqua;
+  color: #00ffdd;
 }
 header .barra .container-fluid .nav-link .active {
   color: #afd3e2;
@@ -46,12 +46,12 @@ header .barra .container-fluid .nav-link .active {
 
 footer {
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 0.3rem;
   background-color: #0e185f;
-  color: #afd3e2;
+  color: white;
   height: 9rem;
 }
 footer .footer-subtitulo {
@@ -60,9 +60,9 @@ footer .footer-subtitulo {
   padding-top: 2rem;
 }
 footer .footer-redes {
+  display: flex;
   list-style: none;
   padding: 0;
-  display: flex;
   gap: 7px;
 }
 footer .footer-redes .redes {
@@ -70,9 +70,9 @@ footer .footer-redes .redes {
 }
 footer .footer-redes .redes .enlace-redes {
   display: block;
+  text-align: center;
   width: 40px;
   height: 40px;
-  text-align: center;
   line-height: 40px;
   font-size: 30px;
   transition: font-size 0.3s ease;
@@ -87,12 +87,13 @@ footer .footer-derechos {
 
 /* BANNER*/
 main .banner-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   position: relative;
   background: url(../multimedia/img/banner-1.jpg) center;
   background-repeat: no-repeat;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 80vh;
   color: white;
   object-fit: cover;
@@ -122,14 +123,14 @@ main .banner-container .banner-info .titulo-banner {
 }
 main .banner-container .banner-info .button-home {
   display: block;
-  padding: 0.2rem 1rem;
+  text-align: center;
   background-color: #00ffdd;
   color: #0e185f;
   text-decoration: none;
-  border-radius: 7px;
-  text-align: center;
   text-transform: uppercase;
   font-weight: bold;
+  padding: 0.2rem 1rem;
+  border-radius: 7px;
 }
 main .banner-container .banner-info .button-home:hover {
   background-color: #0e185f;
@@ -221,22 +222,22 @@ main .servicios .servicios-3 .button-servicios:hover {
 
 main .nosotros-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  background-color: whitesmoke;
+  background-color: white;
   width: 100%;
   gap: 1rem;
-  padding: 0 2rem;
+  padding: 0 3rem;
   box-sizing: border-box;
 }
 main .nosotros-container .titulo-nosotros {
+  text-align: center;
   color: #0e185f;
   padding-bottom: 0.5rem;
-  text-align: center;
-  margin-top: 1rem; /* Ajuste: Movido el margin-top aquí */
+  margin-top: 1rem;
   border-bottom: 2px solid #0e185f;
-  margin-bottom: 0.5rem; /* Ajuste: Movido el margin-bottom aquí */
+  margin-bottom: 0.5rem;
 }
 main .nosotros-container .comienzos,
 main .nosotros-container .actualidad {
@@ -244,7 +245,7 @@ main .nosotros-container .actualidad {
   justify-content: center;
   align-items: center;
   width: 100%;
-  gap: 1rem;
+  gap: 2rem;
 }
 main .nosotros-container .comienzos .img-container,
 main .nosotros-container .actualidad .img-container {
@@ -255,7 +256,7 @@ main .nosotros-container .comienzos .img-antes,
 main .nosotros-container .comienzos .img-actualidad,
 main .nosotros-container .actualidad .img-antes,
 main .nosotros-container .actualidad .img-actualidad {
-  width: 50%;
+  width: 60%;
   height: auto;
   object-fit: cover;
   box-shadow: 0px 0px 30px 0px rgb(248, 103, 221);
@@ -268,21 +269,22 @@ main .nosotros-container .actualidad .ahora {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 1rem;
   text-align: center;
-  margin: 1rem;
+  margin: 2rem;
   width: 50%;
 }
-main .nosotros-container .comienzos .antes .resaltado,
-main .nosotros-container .comienzos .ahora .resaltado,
-main .nosotros-container .actualidad .antes .resaltado,
-main .nosotros-container .actualidad .ahora .resaltado {
+main .nosotros-container .comienzos .resaltado,
+main .nosotros-container .actualidad .resaltado {
   font-weight: bold;
   color: black;
 }
-main .actualidad {
+
+.actualidad {
   flex-direction: row-reverse;
 }
-main .pie-nosotros {
+
+.pie-nosotros {
   text-align: center;
   padding-top: 1rem;
   margin-bottom: 1rem;
