--- a/scss/pages/_galeria.scss
+++ b/scss/pages/_galeria.scss
@@ -1,10 +1,10 @@
 main {
   .titulo-galeria {
-    color: #0e185f;
+    color: nth($list: $colores, $n: 1);
     padding-bottom: 0.5rem;
     text-align: center;
     margin-bottom: 0.5rem;
-    border-bottom: 2px solid #0e185f;
+    border-bottom: 2px solid nth($list: $colores, $n: 1);
     margin-top: 1rem;
   }
 
