--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -2,14 +2,15 @@
 
 main {
   .banner-container {
+    @include flex(row, center, center);
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     position: relative;
     background: url(../multimedia/img/banner-1.jpg) center;
     background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     height: 80vh;
-    color: white;
+    color: nth($list: $colores, $n: 3);
     object-fit: cover;
 
     &::before {
@@ -34,23 +35,23 @@ main {
         text-transform: uppercase;
         font-weight: bold;
         margin-bottom: 1rem;
-        color: white;
+        color: nth($list: $colores, $n: 3);
       }
 
       .button-home {
         display: block;
-        padding: 0.2rem 1rem;
-        background-color: #00ffdd;
-        color: #0e185f;
-        text-decoration: none;
-        border-radius: 7px;
         text-align: center;
+        background-color: nth($list: $colores, $n: 2);
+        color: nth($list: $colores, $n: 1);
+        text-decoration: none;
         text-transform: uppercase;
         font-weight: bold;
+        padding: 0.2rem 1rem;
+        border-radius: 7px;
 
         &:hover {
-          background-color: #0e185f;
-          color: #00ffdd;
+          background-color: nth($list: $colores, $n: 1);
+          color: nth($list: $colores, $n: 2);
           transition: 0.7s;
         }
       }
