--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -1,22 +1,23 @@
 main {
   .nosotros-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: whitesmoke;
+    @include flex(column, center, center);
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
+    background-color: nth($list: $colores, $n: 3);
     width: 100%;
     gap: 1rem;
-    padding: 0 2rem;
+    padding: 0 3rem;
     box-sizing: border-box;
 
     .titulo-nosotros {
-      color: #0e185f;
-      padding-bottom: 0.5rem;
       text-align: center;
-      margin-top: 1rem; /* Ajuste: Movido el margin-top aquí */
-      border-bottom: 2px solid #0e185f;
-      margin-bottom: 0.5rem; /* Ajuste: Movido el margin-bottom aquí */
+      color: nth($list: $colores, $n: 1);
+      padding-bottom: 0.5rem;
+      margin-top: 1rem;
+      border-bottom: 2px solid nth($list: $colores, $n: 1);
+      margin-bottom: 0.5rem;
     }
 
     .comienzos,
@@ -25,7 +26,7 @@ main {
       justify-content: center;
       align-items: center;
       width: 100%;
-      gap: 1rem;
+      gap: 2rem;
 
       .img-container {
         max-width: 50%;
@@ -34,7 +35,7 @@ main {
 
       .img-antes,
       .img-actualidad {
-        width: 50%;
+        width: 60%;
         height: auto;
         object-fit: cover;
         box-shadow: 0px 0px 30px 0px rgb(248, 103, 221);
@@ -42,88 +43,31 @@ main {
 
       .antes,
       .ahora {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        @include flex(column, center, center);
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: center;
+        // align-items: center;
+        font-size: 1rem;
         text-align: center;
-        margin: 1rem;
+        margin: 2rem;
         width: 50%;
+      }
 
-        .resaltado {
-          font-weight: bold;
-          color: black;
-        }
+      .resaltado {
+        font-weight: bold;
+        color: black;
       }
     }
   }
-
-  .actualidad {
-    flex-direction: row-reverse;
-  }
-  .pie-nosotros {
-    text-align: center;
-    padding-top: 1rem;
-    margin-bottom: 1rem;
-    color: #0e185f;
-  }
 }
 
-// main {
-//   .nosotros-container {
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     flex-direction: column;
-//     background-color: whitesmoke;
-//     width: 100%;
-//     gap: 1rem;
-//     padding: 0 2rem;
-//     box-sizing: border-box;
-
-//     .titulo-nosotros {
-//       color: #0e185f;
-//       padding-bottom: 0.5rem;
-//       text-align: center;
-//       margin-bottom: 0.5rem;
-//       border-bottom: 2px solid #0e185f;
-//       margin-top: 1rem;
-//     }
-//     .comienzos {
-//       display: flex;
-//       justify-content: center;
-//       align-items: center;
-//       width: 100%;
-//       gap: 1rem;
-
-//       .img-container {
-//         max-width: 50%;
-//         margin: 0 auto;
-//       }
-//       .comienzos img,
-//       .actualidad img {
-//         width: 50%;
-//         object-fit: cover;
-//         box-shadow: 0px 0px 30px 0px rgb(248, 103, 221);
-//       }
-
-//       .antes,
-//       .ahora {
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: center;
-//         align-items: center;
-//         text-align: center;
-//         margin: 1rem;
-//         width: 50%;
-//         .resaltado {
-//           font-weight: bold;
-//           color: black;
-//         }
-//       }
-//     }
-//   }
-//   .actualidad {
-//     flex-direction: row-reverse;
-//   }
-// }
+.actualidad {
+  flex-direction: row-reverse;
+}
+.pie-nosotros {
+  text-align: center;
+  padding-top: 1rem;
+  margin-bottom: 1rem;
+  color: #0e185f;
+}
